Update project configuration with ESLint and Prettier scripts, enhance global styles, and refactor layout components. Introduce new sections on the homepage and improve header functionality with scroll detection.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,5 @@
     "typescript",
     "typescriptreact"
   ],
-  "eslint.runtime": "node",
-  "cSpell.words": ["Adebayo", "Greentech", "Ololade", "QDAS", "Wuse"]
+  "eslint.runtime": "node"
 }
